Globally prevent images overflowing containers

--- a/src/css/swa/content.less
+++ b/src/css/swa/content.less
@@ -8,6 +8,11 @@
 
 @import "variables.less";
 
+/* Prevent images from overflowing containers globally */
+img {
+	max-width: 100%;
+}
+
 .swa-page {
 	/* Padding so navbar doesn't eat into the page - uncomment if using navbar-fixed-top */
 	//padding-top: @navbar-height;
